--- a/index.html
+++ b/index.html
@@ -24,123 +24,127 @@
   <body>
     <header>
       <div class="header">
-        <div class="header-container">
-          <a href="./index.html" lang="en" class="logo"
-            >Web<span>Studio</span></a
-          >
-          <nav>
-            <ul class="header-list">
-              <li><a href="./index.html" class="header-nav">Студія</a></li>
-              <li>
-                <a href="./portfolio.html" class="header-nav">Портфоліо</a>
-              </li>
-              <li><a href="" class="header-nav">Контакти</a></li>
-            </ul>
-          </nav>
-        </div>
-        <ul class="header-contacts">
-          <li>
-            <a href="mailto:info@devstudio.com" class="tel-mail"
-              >info@devstudio.com</a
+        <div class="container">
+          <div class="header-container">
+            <a href="./index.html" lang="en" class="logo"
+              >Web<span>Studio</span></a
             >
-          </li>
-          <li>
-            <a href="tel:+380961111111" class="tel-mail">+38 096 111 11 11</a>
-          </li>
-        </ul>
+            <nav>
+              <ul class="header-list">
+                <li><a href="./index.html" class="header-nav">Студія</a></li>
+                <li>
+                  <a href="./portfolio.html" class="header-nav">Портфоліо</a>
+                </li>
+                <li><a href="" class="header-nav">Контакти</a></li>
+              </ul>
+            </nav>
+          </div>
+          <ul class="header-contacts">
+            <li>
+              <a href="mailto:info@devstudio.com" class="tel-mail"
+                >info@devstudio.com</a
+              >
+            </li>
+            <li>
+              <a href="tel:+380961111111" class="tel-mail">+38 096 111 11 11</a>
+            </li>
+          </ul>
+        </div>
       </div>
     </header>
     <main>
-      <section class="hero">
-        <h1>Ефективні рішення для вашого бізнесу</h1>
-        <button type="button" class="button">Замовити послугу</button>
-      </section>
-      <section class="features">
-        <h2 class="visually-hidden">Наші особливості</h2>
-        <ul>
-          <li>
-            <h3>Увага до деталей</h3>
-            <p>
-              Ідейні міркування, і навіть початок повсякденної роботи з
-              формування позиції.
-            </p>
-          </li>
-          <li>
-            <h3>Пунктуальність</h3>
-            <p>
-              Завдання організації, особливо рамки і місце навчання кадрів тягне
-              у себе.
-            </p>
-          </li>
-          <li>
-            <h3>Планування</h3>
-            <p>
-              Так само консультація з широким активом значною мірою зумовлює.
-            </p>
-          </li>
-          <li>
-            <h3>Сучасні технології</h3>
-            <p>
-              Значимість цих проблем настільки очевидна, що реалізація планових
-              завдань.
-            </p>
-          </li>
-        </ul>
-      </section>
-      <section class="our-works">
-        <h2>Чим ми займаємося</h2>
-        <ul>
-          <li>
-            <img
-              src="./images/box1.jpg"
-              alt="перший малюнок"
-              width="370"
-              height="294"
-            />
-          </li>
-          <li>
-            <img
-              src="./images/box2.jpg"
-              alt="другий малюнок"
-              width="370"
-              height="294"
-            />
-          </li>
-          <li>
-            <img
-              src="./images/box3.jpg"
-              alt="третій малюнок"
-              width="370"
-              height="294"
-            />
-          </li>
-        </ul>
-      </section>
-      <section class="our-team">
-        <h2>Наша команда</h2>
-        <ul>
-          <li>
-            <img src="./images/team1.jpg" alt="Ігор Дем'яненко" width="270" />
-            <h3>Ігор Дем'яненко</h3>
-            <p lang="en">Product Designer</p>
-          </li>
-          <li>
-            <img src="./images/team2.jpg" alt="Ольга Рєпіна" width="270" />
-            <h3>Ольга Рєпіна</h3>
-            <p lang="en">Frontend Developer</p>
-          </li>
-          <li>
-            <img src="./images/team3.jpg" alt="Микола Тарасов" width="270" />
-            <h3>Микола Тарасов</h3>
-            <p lang="en">Marketing</p>
-          </li>
-          <li>
-            <img src="./images/team4.jpg" alt="Михайло Єрмаков" width="270" />
-            <h3>Михайло Єрмаков</h3>
-            <p lang="en">UI Designer</p>
-          </li>
-        </ul>
-      </section>
+      <div class="main-container">
+        <section class="hero">
+          <h1>Ефективні рішення для вашого бізнесу</h1>
+          <button type="button" class="button">Замовити послугу</button>
+        </section>
+        <section class="features">
+          <h2 class="visually-hidden">Наші особливості</h2>
+          <ul>
+            <li>
+              <h3>Увага до деталей</h3>
+              <p>
+                Ідейні міркування, і навіть початок повсякденної роботи з
+                формування позиції.
+              </p>
+            </li>
+            <li>
+              <h3>Пунктуальність</h3>
+              <p>
+                Завдання організації, особливо рамки і місце навчання кадрів
+                тягне у себе.
+              </p>
+            </li>
+            <li>
+              <h3>Планування</h3>
+              <p>
+                Так само консультація з широким активом значною мірою зумовлює.
+              </p>
+            </li>
+            <li>
+              <h3>Сучасні технології</h3>
+              <p>
+                Значимість цих проблем настільки очевидна, що реалізація
+                планових завдань.
+              </p>
+            </li>
+          </ul>
+        </section>
+        <section class="our-works">
+          <h2>Чим ми займаємося</h2>
+          <ul>
+            <li>
+              <img
+                src="./images/box1.jpg"
+                alt="перший малюнок"
+                width="370"
+                height="294"
+              />
+            </li>
+            <li>
+              <img
+                src="./images/box2.jpg"
+                alt="другий малюнок"
+                width="370"
+                height="294"
+              />
+            </li>
+            <li>
+              <img
+                src="./images/box3.jpg"
+                alt="третій малюнок"
+                width="370"
+                height="294"
+              />
+            </li>
+          </ul>
+        </section>
+        <section class="our-team">
+          <h2>Наша команда</h2>
+          <ul>
+            <li>
+              <img src="./images/team1.jpg" alt="Ігор Дем'яненко" width="270" />
+              <h3>Ігор Дем'яненко</h3>
+              <p lang="en">Product Designer</p>
+            </li>
+            <li>
+              <img src="./images/team2.jpg" alt="Ольга Рєпіна" width="270" />
+              <h3>Ольга Рєпіна</h3>
+              <p lang="en">Frontend Developer</p>
+            </li>
+            <li>
+              <img src="./images/team3.jpg" alt="Микола Тарасов" width="270" />
+              <h3>Микола Тарасов</h3>
+              <p lang="en">Marketing</p>
+            </li>
+            <li>
+              <img src="./images/team4.jpg" alt="Михайло Єрмаков" width="270" />
+              <h3>Михайло Єрмаков</h3>
+              <p lang="en">UI Designer</p>
+            </li>
+          </ul>
+        </section>
+      </div>
     </main>
     <footer class="footer">
       <a href="./index.html" lang="en" class="logo">Web<span>Studio</span></a>
