--- a/index.html
+++ b/index.html
@@ -147,30 +147,32 @@
       </div>
     </main>
     <footer class="footer">
-      <a href="./index.html" lang="en" class="logo">Web<span>Studio</span></a>
-      <address class="address">
-        <ul>
-          <li>
-            <a
-              href="https://goo.gl/maps/nBtPKXU8o3Xq5hkz7"
-              target="_blank"
-              rel="noopener noreferrer nofollow"
-              class="address-footer"
-              >м. Київ, пр-т Лесі Українки, 26</a
-            >
-          </li>
-          <li>
-            <a href="mailto:info@devstudio.com" class="address-contacts"
-              >info@devstudio.com</a
-            >
-          </li>
-          <li>
-            <a href="tel:+380961111111" class="address-contacts"
-              >+38 096 111 11 11</a
-            >
-          </li>
-        </ul>
-      </address>
+      <div class="footer-container">
+        <a href="./index.html" lang="en" class="logo">Web<span>Studio</span></a>
+        <address class="address">
+          <ul>
+            <li>
+              <a
+                href="https://goo.gl/maps/nBtPKXU8o3Xq5hkz7"
+                target="_blank"
+                rel="noopener noreferrer nofollow"
+                class="address-footer"
+                >м. Київ, пр-т Лесі Українки, 26</a
+              >
+            </li>
+            <li>
+              <a href="mailto:info@devstudio.com" class="address-contacts"
+                >info@devstudio.com</a
+              >
+            </li>
+            <li>
+              <a href="tel:+380961111111" class="address-contacts"
+                >+38 096 111 11 11</a
+              >
+            </li>
+          </ul>
+        </address>
+      </div>
     </footer>
   </body>
 </html>
