--- a/portfolio.html
+++ b/portfolio.html
@@ -24,175 +24,201 @@
   <body>
     <header>
       <div class="header">
-        <div class="header-container">
-          <a href="./index.html" lang="en" class="logo"
-            >Web<span>Studio</span></a
-          >
-          <nav>
-            <ul class="header-list">
-              <li><a href="./index.html" class="header-nav">Студія</a></li>
-              <li>
-                <a href="./portfolio.html" class="header-nav">Портфоліо</a>
-              </li>
-              <li><a href="" class="header-nav">Контакти</a></li>
-            </ul>
-          </nav>
-        </div>
-        <ul class="header-contacts">
-          <li>
-            <a href="mailto:info@devstudio.com" class="tel-mail"
-              >info@devstudio.com</a
+        <div class="container">
+          <div class="header-container">
+            <a href="./index.html" lang="en" class="logo"
+              >Web<span>Studio</span></a
             >
-          </li>
-          <li>
-            <a href="tel:+380961111111" class="tel-mail">+38 096 111 11 11</a>
-          </li>
-        </ul>
+            <nav>
+              <ul class="header-list">
+                <li><a href="./index.html" class="header-nav">Студія</a></li>
+                <li>
+                  <a href="./portfolio.html" class="header-nav">Портфоліо</a>
+                </li>
+                <li><a href="" class="header-nav">Контакти</a></li>
+              </ul>
+            </nav>
+          </div>
+          <ul class="header-contacts">
+            <li>
+              <a href="mailto:info@devstudio.com" class="tel-mail"
+                >info@devstudio.com</a
+              >
+            </li>
+            <li>
+              <a href="tel:+380961111111" class="tel-mail">+38 096 111 11 11</a>
+            </li>
+          </ul>
+        </div>
       </div>
     </header>
     <main>
       <section class="portfolio">
-        <h1 class="visually-hidden">Портфоліо</h1>
-        <ul class="portfolio-button">
-          <li>
-            <button type="button" class="portfolio-nav button">Усі</button>
-          </li>
-          <li>
-            <button type="button" class="portfolio-nav button">
-              Веб-сайти
-            </button>
-          </li>
-          <li>
-            <button type="button" class="portfolio-nav button">Додатки</button>
-          </li>
-          <li>
-            <button type="button" class="portfolio-nav button">Дизайн</button>
-          </li>
-          <li>
-            <button type="button" class="portfolio-nav button">
-              Маркетинг
-            </button>
-          </li>
-        </ul>
-        <ul class="portfolio-projects">
-          <li>
-            <img
-              src="./images/project1.jpg"
-              alt="Веб-сайт"
-              width="370"
-              height="294"
-            />
-            <h2>Технокряк</h2>
-            <p>Веб-сайт</p>
-          </li>
-          <li>
-            <img
-              src="./images/project2.jpg"
-              alt="Постер"
-              width="370"
-              height="294"
-            />
-            <h2>Постер New Orlean vs Golden Star</h2>
-            <p>Дизайн</p>
-          </li>
-          <li>
-            <img
-              src="./images/project3.jpg"
-              alt="Ресторан"
-              width="370"
-              height="294"
-            />
-            <h2>Ресторан Seafood</h2>
-            <p>Додаток</p>
-          </li>
-          <li>
-            <img
-              src="./images/project4.jpg"
-              alt="Маркетинг"
-              width="370"
-              height="294"
-            />
-            <h2>Проєкт Prime</h2>
-            <p>Маркетинг</p>
-          </li>
-          <li>
-            <img
-              src="./images/project5.jpg"
-              alt="Проєкт"
-              width="370"
-              height="294"
-            />
-            <h2>Проєкт Boxes</h2>
-            <p>Додаток</p>
-          </li>
-          <li>
-            <img
-              src="./images/project6.jpg"
-              alt="варіант веб-сайту"
-              width="370"
-              height="294"
-            />
-            <h2 lang="en">Inspiration has no Borders</h2>
-            <p>Веб-сайт</p>
-          </li>
-          <li>
-            <img
-              src="./images/project7.jpg"
-              alt="Дизайн"
-              width="370"
-              height="294"
-            />
-            <h2>Видання Limited Edition</h2>
-            <p>Дизайн</p>
-          </li>
-          <li>
-            <img
-              src="./images/project8.jpg"
-              alt="Маркетинг"
-              width="370"
-              height="294"
-            />
-            <h2>Проєкт LAB</h2>
-            <p>Маркетинг</p>
-          </li>
-          <li>
-            <img
-              src="./images/project9.jpg"
-              alt="Додаток"
-              width="370"
-              height="294"
-            />
-            <h2 lang="en">Growing Business</h2>
-            <p>Додаток</p>
-          </li>
-        </ul>
+        <div class="portfolio-container">
+          <h1 class="visually-hidden">Портфоліо</h1>
+          <ul class="portfolio-button">
+            <li>
+              <button type="button" class="portfolio-nav button">Усі</button>
+            </li>
+            <li>
+              <button type="button" class="portfolio-nav button">
+                Веб-сайти
+              </button>
+            </li>
+            <li>
+              <button type="button" class="portfolio-nav button">
+                Додатки
+              </button>
+            </li>
+            <li>
+              <button type="button" class="portfolio-nav button">Дизайн</button>
+            </li>
+            <li>
+              <button type="button" class="portfolio-nav button">
+                Маркетинг
+              </button>
+            </li>
+          </ul>
+          <ul class="portfolio-projects">
+            <li>
+              <img
+                src="./images/project1.jpg"
+                alt="Веб-сайт"
+                width="370"
+                height="294"
+              />
+              <div class="portfolio-picture">
+                <h2>Технокряк</h2>
+                <p>Веб-сайт</p>
+              </div>
+            </li>
+            <li>
+              <img
+                src="./images/project2.jpg"
+                alt="Постер"
+                width="370"
+                height="294"
+              />
+              <div class="portfolio-picture">
+                <h2>Постер New Orlean vs Golden Star</h2>
+                <p>Дизайн</p>
+              </div>
+            </li>
+            <li>
+              <img
+                src="./images/project3.jpg"
+                alt="Ресторан"
+                width="370"
+                height="294"
+              />
+              <div class="portfolio-picture">
+                <h2>Ресторан Seafood</h2>
+                <p>Додаток</p>
+              </div>
+            </li>
+            <li>
+              <img
+                src="./images/project4.jpg"
+                alt="Маркетинг"
+                width="370"
+                height="294"
+              />
+              <div class="portfolio-picture">
+                <h2>Проєкт Prime</h2>
+                <p>Маркетинг</p>
+              </div>
+            </li>
+            <li>
+              <img
+                src="./images/project5.jpg"
+                alt="Проєкт"
+                width="370"
+                height="294"
+              />
+              <div class="portfolio-picture">
+                <h2>Проєкт Boxes</h2>
+                <p>Додаток</p>
+              </div>
+            </li>
+            <li>
+              <img
+                src="./images/project6.jpg"
+                alt="варіант веб-сайту"
+                width="370"
+                height="294"
+              />
+              <div class="portfolio-picture">
+                <h2 lang="en">Inspiration has no Borders</h2>
+                <p>Веб-сайт</p>
+              </div>
+            </li>
+            <li>
+              <img
+                src="./images/project7.jpg"
+                alt="Дизайн"
+                width="370"
+                height="294"
+              />
+              <div class="portfolio-picture">
+                <h2>Видання Limited Edition</h2>
+                <p>Дизайн</p>
+              </div>
+            </li>
+            <li>
+              <img
+                src="./images/project8.jpg"
+                alt="Маркетинг"
+                width="370"
+                height="294"
+              />
+              <div class="portfolio-picture">
+                <h2>Проєкт LAB</h2>
+                <p>Маркетинг</p>
+              </div>
+            </li>
+            <li>
+              <img
+                src="./images/project9.jpg"
+                alt="Додаток"
+                width="370"
+                height="294"
+              />
+              <div class="portfolio-picture">
+                <h2 lang="en">Growing Business</h2>
+                <p>Додаток</p>
+              </div>
+            </li>
+          </ul>
+        </div>
       </section>
     </main>
     <footer class="footer">
-      <a href="./index.html" lang="en" class="logo">Web<span>Studio</span></a>
-      <address class="address">
-        <ul>
-          <li>
-            <a
-              href="https://goo.gl/maps/nBtPKXU8o3Xq5hkz7"
-              target="_blank"
-              rel="noopener noreferrer nofollow"
-              class="address-footer"
-              >м. Київ, пр-т Лесі Українки, 26</a
-            >
-          </li>
-          <li>
-            <a href="mailto:info@devstudio.com" class="address-contacts"
-              >info@devstudio.com</a
-            >
-          </li>
-          <li>
-            <a href="tel:+380961111111" class="address-contacts"
-              >+38 096 111 11 11</a
-            >
-          </li>
-        </ul>
-      </address>
+      <div class="footer-container">
+        <a href="./index.html" lang="en" class="logo">Web<span>Studio</span></a>
+        <address class="address">
+          <ul>
+            <li>
+              <a
+                href="https://goo.gl/maps/nBtPKXU8o3Xq5hkz7"
+                target="_blank"
+                rel="noopener noreferrer nofollow"
+                class="address-footer"
+                >м. Київ, пр-т Лесі Українки, 26</a
+              >
+            </li>
+            <li>
+              <a href="mailto:info@devstudio.com" class="address-contacts"
+                >info@devstudio.com</a
+              >
+            </li>
+            <li>
+              <a href="tel:+380961111111" class="address-contacts"
+                >+38 096 111 11 11</a
+              >
+            </li>
+          </ul>
+        </address>
+      </div>
     </footer>
   </body>
 </html>
