--- a/portfolio.html
+++ b/portfolio.html
@@ -22,39 +22,33 @@
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
-    <header>
-      <div class="header">
-        <div class="container">
-          <div class="header-container">
-            <a href="./index.html" lang="en" class="logo"
-              >Web<span>Studio</span></a
-            >
-            <nav>
-              <ul class="header-list">
-                <li><a href="./index.html" class="header-nav">Студія</a></li>
-                <li>
-                  <a href="./portfolio.html" class="header-nav">Портфоліо</a>
-                </li>
-                <li><a href="" class="header-nav">Контакти</a></li>
-              </ul>
-            </nav>
-          </div>
-          <ul class="header-contacts">
+    <header class="header">
+      <div class="container header-container">
+        <a href="./index.html" lang="en" class="logo">Web<span>Studio</span></a>
+        <nav>
+          <ul class="header-list">
+            <li><a href="./index.html" class="header-nav">Студія</a></li>
             <li>
-              <a href="mailto:info@devstudio.com" class="tel-mail"
-                >info@devstudio.com</a
-              >
+              <a href="./portfolio.html" class="header-nav">Портфоліо</a>
             </li>
-            <li>
-              <a href="tel:+380961111111" class="tel-mail">+38 096 111 11 11</a>
-            </li>
+            <li><a href="" class="header-nav">Контакти</a></li>
           </ul>
-        </div>
+        </nav>
+        <ul class="header-contacts">
+          <li>
+            <a href="mailto:info@devstudio.com" class="tel-mail"
+              >info@devstudio.com</a
+            >
+          </li>
+          <li>
+            <a href="tel:+380961111111" class="tel-mail">+38 096 111 11 11</a>
+          </li>
+        </ul>
       </div>
     </header>
     <main>
       <section class="portfolio">
-        <div class="portfolio-container">
+        <div class="portfolio-container container">
           <h1 class="visually-hidden">Портфоліо</h1>
           <ul class="portfolio-button">
             <li>
@@ -193,7 +187,7 @@
       </section>
     </main>
     <footer class="footer">
-      <div class="footer-container">
+      <div class="footer-container container">
         <a href="./index.html" lang="en" class="logo">Web<span>Studio</span></a>
         <address class="address">
           <ul>
